[package]
name = "proxy-selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.5.0-alpha.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.25.0", features = ["full"] }
